--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "2048 Game Premium",
+  "name": "2048 Game",
   "short_name": "2048",
   "description": "A premium version of the classic 2048 game with enhanced features",
   "start_url": "/",
