--- a/manifest.json
+++ b/manifest.json
@@ -1,68 +1,19 @@
 {
   "name": "2048 Game",
   "short_name": "2048",
-  "description": "A premium version of the classic 2048 game with enhanced features",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#faf8ef",
-  "theme_color": "#8f7a66",
-  "orientation": "portrait-primary",
+  "theme_color": "#faf8ef",
+  "orientation": "portrait",
   "icons": [
-    {
-      "src": "icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "screenshots/screenshot1.png",
-      "sizes": "640x1136",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "screenshots/screenshot2.png",
-      "sizes": "1136x640",
-      "type": "image/png",
-      "form_factor": "wide"
-    }
+    { "src": "icon2048-72x72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "icon2048-96x96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "icon2048-128x128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "icon2048-144x144.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "icon2048-152x152.png", "sizes": "152x152", "type": "image/png" },
+    { "src": "icon2048-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon2048-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "icon2048-512x512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
