--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "2048 Game",
   "short_name": "2048",
-  "start_url": "./",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#faf8ef",
   "theme_color": "#faf8ef",
